test-simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-simple-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-frontend
  template:
    metadata:
      labels:
        app: test-frontend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
